--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -2256,6 +2256,7 @@
   \dim_set:Nf \subfiglist_tempa_dim
     { \subfiglist_tempa_dim * \dim_ratio:nn { \fp_to_dim:N \subfiglist_temp_fp } { 1pt } }
   
+  \prop_put:Nnn \subfiglist_temp_prop { height } { #2 }
   \prop_put:NnV \subfiglist_temp_prop { width } \subfiglist_tempa_dim
   \subfiglist_tl_set_from_prop:NN \subfiglist_tempa_tl \subfiglist_temp_prop
   \prop_put:NnV \subfiglist_canvas_prop { #3 } \subfiglist_tempa_tl
@@ -2267,6 +2268,7 @@
 \cs_generate_variant:Nn \subfiglist_dimension_canvas:Nnn { NnV }
 \cs_generate_variant:Nn \subfiglist_dimension_canvas:Nnn { NVn }
 \cs_generate_variant:Nn \subfiglist_dimension_canvas:Nnn { NVV }
+
 
 \cs_new:Npn \subfiglist_dimension_space:Nnn #1 #2 #3
 %
@@ -2282,6 +2284,7 @@
 \cs_generate_variant:Nn \subfiglist_dimension_space:Nnn { NnV }
 \cs_generate_variant:Nn \subfiglist_dimension_space:Nnn { NVn }
 \cs_generate_variant:Nn \subfiglist_dimension_space:Nnn { NVV }
+
 
 \cs_new:Npn \subfiglist_dimension_line:Nnn #1 #2 #3
 %
@@ -2404,6 +2407,10 @@
   }
 }
 
+\cs_generate_variant:Nn \subfiglist_load:nn { nV }
+\cs_generate_variant:Nn \subfiglist_load:nn { Vn }
+\cs_generate_variant:Nn \subfiglist_load:nn { VV }
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -2424,18 +2431,178 @@
     {
       \subfiglist_load:nn { #2 } { ! }
     }
-
+    
     % Get box dimensions
     \dim_set:Nn \subfiglist_canvas_height_dim { \ht\subfiglist_box }
     \dim_set:Nn \subfiglist_canvas_width_dim  { \wd\subfiglist_box }
-
+    
     % Store ratio width/height
     \fp_set:Nn \subfiglist_tempa_fp { \subfiglist_canvas_width_dim / \subfiglist_canvas_height_dim }
     \tl_set:Nf #1 { \fp_use:N \subfiglist_tempa_fp }
-
+  
   % Return local variables with group scope
   \subfiglist_group_var_return:NN \tl_set:Nn #1
   \group_end:
+}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%   Output macros   %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% Output specified file
+\cs_new:Npn \subfiglist_put_file:N #1
+%
+% #1: Property list containing canvas properties
+%
+{
+  \prop_get:NnN #1 { path } \subfiglist_tempa_tl
+  \prop_get:NnN #1 { width } \subfiglist_tempb_tl
+  \subfiglist_load:VV \subfiglist_tempa_tl \subfiglist_tempb_tl
+}
+
+% Output specified dummy or dummy file
+\tl_map_inline:nn { { dummy } { dummyfile } }
+{
+  \cs_new:cpn { subfiglist_put_ #1 :N } ##1
+  %
+  % #1: Property list containing canvas properties
+  %
+  {
+    \prop_get:NnN ##1 { width } \subfiglist_tempa_tl
+    \prop_get:NnN ##1 { height } \subfiglist_tempb_tl
+    
+    \dim_set:NV \subfiglist_tempa_dim \subfiglist_tempa_tl
+    \dim_set:NV \subfiglist_tempb_dim \subfiglist_tempb_tl
+    
+  %  % Has a frame been requested?
+  %  \bool_set:Nx \subfiglist_temp_bool
+  %    { \tl_item:Nn \subfiglist_dummy_file_frame_tl { #1 } }
+    
+    % Put minipage with size of dummy
+    \begin { minipage } [ b ] [ \subfiglist_tempb_dim ] [ c ] { \subfiglist_tempa_dim }
+      \mbox
+      {
+  %      % Put frame if necessary
+  %      \bool_if:NT \subfiglist_temp_bool
+  %      {
+  %        % Calculate frame width
+  %        \dim_set:Nn \subfiglist_tempa_dim { #2 }
+  %        \dim_sub:Nn \subfiglist_tempa_dim { 2 \fboxrule }
+  %        \dim_sub:Nn \subfiglist_tempa_dim { 2 \fboxsep }
+  %        % Calculate frame height
+  %        \dim_set:Nn \subfiglist_tempb_dim { #3 }
+  %        \dim_sub:Nn \subfiglist_tempb_dim { 2 \fboxrule }
+  %        \dim_sub:Nn \subfiglist_tempb_dim { 2 \fboxsep }
+  %        % Put frame box
+  %        \fbox
+  %        {
+  %          \begin { minipage } [ c ] [ \subfiglist_tempb_dim ] { \subfiglist_tempa_dim }
+  %            \mbox{}
+  %          \end { minipage }
+  %        }
+  %      }
+      }
+    \end { minipage }
+  }
+}
+
+% Output specified canvas
+\cs_new:Npn \subfiglist_put_canvas:n #1
+%
+% #1: Canvas number
+%
+{
+  \prop_get:NnN \subfiglist_canvas_prop { #1 } \subfiglist_tempa_tl
+  \subfiglist_prop_set_from_tl:NN \subfiglist_temp_prop \subfiglist_tempa_tl
+%  
+  % Store canvas in box
+  \setbox\subfiglist_box\hbox
+  {
+    % Vertical offset:
+    \vbox
+    {
+      \prop_get:NnN \subfiglist_temp_prop { top } \subfiglist_tempa_tl
+      \dim_set:NV \subfiglist_tempa_dim \subfiglist_tempa_tl
+      \vspace { \subfiglist_tempa_dim }
+      % Horizontal offset
+      \hbox
+      {
+        \prop_get:NnN \subfiglist_temp_prop { left } \subfiglist_tempa_tl
+        \dim_set:NV \subfiglist_tempa_dim \subfiglist_tempa_tl
+        \hspace { \subfiglist_tempa_dim }
+        % Put canvas
+        \prop_get:NnN \subfiglist_temp_prop { type } \subfiglist_tempa_tl
+        \subfiglist_use:c { subfiglist_put_ \tl_use:N \subfiglist_tempa_tl :N } \subfiglist_temp_prop
+        % Horizontal offset
+        \prop_get:NnN \subfiglist_temp_prop { right } \subfiglist_tempa_tl
+        \dim_set:NV \subfiglist_tempa_dim \subfiglist_tempa_tl
+        \hspace { \subfiglist_tempa_dim }
+      }
+    % Vertical offset
+    \prop_get:NnN \subfiglist_temp_prop { bot } \subfiglist_tempa_tl
+    \dim_set:NV \subfiglist_tempa_dim \subfiglist_tempa_tl
+    \vspace { \subfiglist_tempa_dim }
+    }
+  }
+  
+  % Get canvas width
+  \dim_set:Nn \subfiglist_tempa_dim { \wd\subfiglist_box }
+  
+  \begin { subfigure } [ b ] { \subfiglist_tempa_dim }
+    \centering
+    
+    % Place canvas
+    \leavevmode \rlap{ \usebox\subfiglist_box }
+    
+%    % Check whether a label has been put for the current canvas
+%    \int_zero:N \subfiglist_tempb_int
+%    \bool_set_false:N \subfiglist_temp_bool
+%    \tl_map_inline:Nn \subfiglist_label_nums_tl
+%    {
+%      \int_incr:N \subfiglist_tempb_int
+%      
+%      \int_compare:nT { ##1 = #2 }
+%      {
+%        \bool_set_true:N \subfiglist_temp_bool
+%        \tl_map_break:
+%      }
+%    }
+%      
+%    % Has a label been specified?
+%    \bool_if:NT \subfiglist_temp_bool
+%    {
+%      % Put label
+%      \subfiglist_label_inset:nnn { \subfiglist_tempb_int }
+%        { \wd\subfiglist_box } { \ht\subfiglist_box }
+%    }
+%    
+%    % Check whether an overlay has been given for the current canvas
+%    \int_zero:N \subfiglist_tempb_int
+%    \bool_set_false:N \subfiglist_temp_bool
+%    \tl_map_inline:Nn \subfiglist_overlay_nums_tl
+%    {
+%      \int_incr:N \subfiglist_tempb_int
+%      
+%      \int_compare:nT { ##1 = #2 }
+%      {
+%        \bool_set_true:N \subfiglist_temp_bool
+%        \tl_map_break:
+%      }
+%    }
+%      
+%    % Has an overlay been specified?
+%    \bool_if:NT \subfiglist_temp_bool
+%    {
+%      % Put overlay
+%      \subfiglist_overlay:nnn { \subfiglist_tempb_int }
+%        { \wd\subfiglist_box } { \ht\subfiglist_box }
+%    }
+%    
+    % Fix spacing
+    \phantom { \usebox \subfiglist_box }
+  \end { subfigure }
 }
 
 
@@ -2562,309 +2729,6 @@
   }
 }
 
-
-% Output specified file
-\cs_new:Npn \subfiglist_put_file:nnn #1 #2 #3
-%
-% #1: file number
-% #2: image width
-% #3: image height
-%
-{
-  \subfiglist_load:ff { \tl_item:Nn \subfiglist_file_names_tl { #1 } } { #2 }
-}
-
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { nnV }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { nVn }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { nVV }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { Vnn }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { VnV }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { VVn }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { VVV }
-
-% Output specified dummy file
-\cs_new:Npn \subfiglist_put_dummy_file:nnn #1 #2 #3
-%
-% #1: dummy file number
-% #2: image width
-% #3: image height
-%
-{
-  \group_begin:
-  
-  % Has a frame been requested?
-  \bool_set:Nx \subfiglist_temp_bool
-    { \tl_item:Nn \subfiglist_dummy_file_frame_tl { #1 } }
-  
-  % Put minipage with size of dummy file
-  \begin { minipage } [ b ] [ #3 ] [ c ] { #2 }
-    \mbox
-    {
-      % Put frame if necessary
-      \bool_if:NT \subfiglist_temp_bool
-      {
-        % Calculate frame width
-        \dim_set:Nn \subfiglist_tempa_dim { #2 }
-        \dim_sub:Nn \subfiglist_tempa_dim { 2 \fboxrule }
-        \dim_sub:Nn \subfiglist_tempa_dim { 2 \fboxsep }
-        % Calculate frame height
-        \dim_set:Nn \subfiglist_tempb_dim { #3 }
-        \dim_sub:Nn \subfiglist_tempb_dim { 2 \fboxrule }
-        \dim_sub:Nn \subfiglist_tempb_dim { 2 \fboxsep }
-        % Put frame box
-        \fbox
-        {
-          \begin { minipage } [ c ] [ \subfiglist_tempb_dim ] { \subfiglist_tempa_dim }
-            \mbox{}
-          \end { minipage }
-        }
-      }
-    }
-  \end { minipage }
-  
-  \group_end:
-}
-
-%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { nnx }
-%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { nxn }
-%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { nxx }
-%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xnn }
-%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xnx }
-%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xxn }
-%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xxx }
-
-% Output specified dummy
-\cs_new:Npn \subfiglist_put_dummy:nnn #1 #2 #3
-%
-% #1: dummy number
-% #2: image width
-% #3: image height
-%
-{
-  \group_begin:
-  
-  % Has a frame been requested?
-  \bool_set:Nx \subfiglist_temp_bool
-    { \tl_item:Nn \subfiglist_dummy_frame_tl { #1 } }
-  
-  % Put minipage with size of dummy
-  \begin { minipage } [ b ] [ #3 ] [ c ] { #2 }
-    \mbox
-    {
-      % Put frame if necessary
-      \bool_if:NT \subfiglist_temp_bool
-      {
-        % Calculate frame width
-        \dim_set:Nn \subfiglist_tempa_dim { #2 }
-        \dim_sub:Nn \subfiglist_tempa_dim { 2 \fboxrule }
-        \dim_sub:Nn \subfiglist_tempa_dim { 2 \fboxsep }
-        % Calculate frame height
-        \dim_set:Nn \subfiglist_tempb_dim { #3 }
-        \dim_sub:Nn \subfiglist_tempb_dim { 2 \fboxrule }
-        \dim_sub:Nn \subfiglist_tempb_dim { 2 \fboxsep }
-        % Put frame box
-        \fbox
-        {
-          \begin { minipage } [ c ] [ \subfiglist_tempb_dim ] { \subfiglist_tempa_dim }
-            \mbox{}
-          \end { minipage }
-        }
-      }
-    }
-  \end { minipage }
-  
-  \group_end:
-}
-
-%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { nnx }
-%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { nxn }
-%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { nxx }
-%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xnn }
-%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xnx }
-%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xxn }
-%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xxx }
-
-% Output specified canvas
-\cs_new:Npn \subfiglist_put_canvas:nn #1 #2
-%
-% #1: Object position of image
-% #2: Canvas number
-%
-{
-  \group_begin:
-  
-  % Search for current canvas in list of files
-  \int_zero:N \subfiglist_tempa_int
-  % Loop over all specified file numbers
-  \tl_map_inline:Nn \subfiglist_file_nums_tl
-  {
-    \int_incr:N \subfiglist_tempa_int
-    % Check if current canvas number has been found
-    \int_compare:nT { ##1 = #2 }
-    {
-      \tl_set:Nn \subfiglist_csname_tl { file }
-      \int_set_eq:NN \subfiglist_tempb_int \subfiglist_tempa_int
-      \tl_map_break:
-    }
-  }
-    
-  % Search for current canvas in list of dummy files
-  \int_zero:N \subfiglist_tempa_int
-  % Loop over all specified file numbers
-  \tl_map_inline:Nn \subfiglist_dummy_file_nums_tl
-  {
-    \int_incr:N \subfiglist_tempa_int
-    % Check if current canvas number has been found
-    \int_compare:nT { ##1 = #2 }
-    {
-      \tl_set:Nn \subfiglist_csname_tl { dummy_file }
-      \int_set_eq:NN \subfiglist_tempb_int \subfiglist_tempa_int
-      \tl_map_break:
-    }
-  }
-
-  % Search for current canvas in list of dummies
-  \int_zero:N \subfiglist_tempa_int
-  % Loop over all specified dummies
-  \tl_map_inline:Nn \subfiglist_dummy_nums_tl
-  {
-    \int_incr:N \subfiglist_tempa_int
-    % Check if current canvas number has been found
-    \int_compare:nT { ##1 = #2 }
-    {
-      \tl_set:Nn \subfiglist_csname_tl { dummy }
-      \int_set_eq:NN \subfiglist_tempb_int \subfiglist_tempa_int
-      \tl_map_break:
-    }
-  }
-
-  % Search for object position of current canvas
-  \int_zero:N \subfiglist_tempa_int
-  % Loop over all object positions
-  \tl_map_inline:Nn \subfiglist_objects_pos_tl
-  {
-    \int_incr:N \subfiglist_tempa_int
-    % Check if current canvas position has been found
-    \subfiglist_tl_if_eq:nnT { #1 } { ##1 }
-    {
-      \tl_map_break:
-    }
-  }
-  
-  % Save width and height of canvas
-  \dim_set:Nf \subfiglist_tempa_dim
-    { \tl_item:Nn \subfiglist_objects_width_tl { \subfiglist_tempa_int } }
-  \dim_set:Nf \subfiglist_tempb_dim
-  {
-    \tl_item:Nn \subfiglist_objects_ratio_tl { \subfiglist_tempa_int }
-    \exp_not:N \subfiglist_tempa_dim
-  }
-
-  % Search for number of current canvas
-  \int_zero:N \subfiglist_tempa_int
-  % Loop over all specified canvas numbers
-  \tl_map_inline:Nn \subfiglist_canvas_nums_tl
-  {
-    \int_incr:N \subfiglist_tempa_int
-    % Check if current canvas number has been found
-    \int_compare:nT { ##1 = #2 }
-    {
-      \tl_map_break:
-    }
-  }
-  
-  % Reduce canvas width by explicit horizontal offset
-  \dim_sub:Nf \subfiglist_tempa_dim
-    { \tl_item:Nn \subfiglist_canvas_left_tl { \subfiglist_tempa_int } }
-  \dim_sub:Nf \subfiglist_tempa_dim
-    { \tl_item:Nn \subfiglist_canvas_right_tl { \subfiglist_tempa_int } }
-  % Reduce canvas height by explicit vertical offset
-  \dim_sub:Nf \subfiglist_tempb_dim
-    { \tl_item:Nn \subfiglist_canvas_top_tl { \subfiglist_tempa_int } }
-  \dim_sub:Nf \subfiglist_tempb_dim
-    { \tl_item:Nn \subfiglist_canvas_bot_tl { \subfiglist_tempa_int } }
-    
-  % Store canvas in box
-  \setbox\subfiglist_box\hbox
-  {
-    % Vertical offset:
-    \vbox
-    {
-      \vspace { \tl_item:Nn \subfiglist_canvas_top_tl { \subfiglist_tempa_int } }
-      % Horizontal offset
-      \hbox
-      {
-        \hspace { \tl_item:Nn \subfiglist_canvas_left_tl { \subfiglist_tempa_int } }
-        % Put canvas
-        \subfiglist_use:c { subfiglist_put_ \tl_use:N \subfiglist_csname_tl :VVV }
-          \subfiglist_tempb_int
-          \subfiglist_tempa_dim
-          \subfiglist_tempb_dim
-        \hspace { \tl_item:Nn \subfiglist_canvas_right_tl { \subfiglist_tempa_int } }
-      }
-    \vspace { \tl_item:Nn \subfiglist_canvas_bot_tl { \subfiglist_tempa_int } }
-    }
-  }
-
-  % Get canvas width
-  \dim_set:Nn \subfiglist_tempa_dim { \wd\subfiglist_box }
-  
-  \begin { subfigure } [ b ] { \subfiglist_tempa_dim }
-    \centering
-    
-    % Place canvas
-    \leavevmode \rlap{ \usebox\subfiglist_box }
-    
-    % Check whether a label has been put for the current canvas
-    \int_zero:N \subfiglist_tempb_int
-    \bool_set_false:N \subfiglist_temp_bool
-    \tl_map_inline:Nn \subfiglist_label_nums_tl
-    {
-      \int_incr:N \subfiglist_tempb_int
-      
-      \int_compare:nT { ##1 = #2 }
-      {
-        \bool_set_true:N \subfiglist_temp_bool
-        \tl_map_break:
-      }
-    }
-      
-    % Has a label been specified?
-    \bool_if:NT \subfiglist_temp_bool
-    {
-      % Put label
-      \subfiglist_label_inset:nnn { \subfiglist_tempb_int }
-        { \wd\subfiglist_box } { \ht\subfiglist_box }
-    }
-    
-    % Check whether an overlay has been given for the current canvas
-    \int_zero:N \subfiglist_tempb_int
-    \bool_set_false:N \subfiglist_temp_bool
-    \tl_map_inline:Nn \subfiglist_overlay_nums_tl
-    {
-      \int_incr:N \subfiglist_tempb_int
-      
-      \int_compare:nT { ##1 = #2 }
-      {
-        \bool_set_true:N \subfiglist_temp_bool
-        \tl_map_break:
-      }
-    }
-      
-    % Has an overlay been specified?
-    \bool_if:NT \subfiglist_temp_bool
-    {
-      % Put overlay
-      \subfiglist_overlay:nnn { \subfiglist_tempb_int }
-        { \wd\subfiglist_box } { \ht\subfiglist_box }
-    }
-    
-    % Fix spacing
-    \phantom { \usebox \subfiglist_box }
-  \end { subfigure }
-    
-  \group_end:
-}
 
 
 % Output specified subblock
