--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -938,8 +938,8 @@ xxx
 %  \subfiglist_canvas_count_int
 \begin{subfiglist}{1 2}%{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
 %  \tl_show:N \subfiglist_spec_tl \error
-  \subfiglist_setup_dummy:nnn {left=2pt} {1} { 1 }
-  \subfiglist_setup_dummy:nnn {} {2} { 1 }
+  \subfiglist_setup_dummy:nnn {} {1} { 1 }
+  \subfiglist_setup_file:nnn {left=1em} {2} { figures/02 }
 %  \subfiglist_setup_dummy:nnn {} {3} { 1.23 }
 %  \subfiglist_setup_dummy:nnn {} {4} { 4:3 }
 %  \subfiglist_setup_dummy:nnn {} {5} { 4:3 }
@@ -953,10 +953,13 @@ xxx
 \dim_new:N \tempa_dim
 \dim_new:N \tempb_dim
 
-\subfiglist_dimension_line:NnV \subfiglist_dimensioned_spec_tl { 25.16667pt } \subfiglist_tempb_tl
-\dim_use:N \subfiglist_line_height_dim
+\subfiglist_dimension_line:NnV \subfiglist_dimensioned_spec_tl { 205.16667pt } \subfiglist_tempb_tl
+\dim_use:N \subfiglist_line_height_dim\\
 
-  \prop_show:N \subfiglist_canvas_prop \error
-  \tl_show:N \subfiglist_dimensioned_spec_tl
+%  \prop_show:N \subfiglist_canvas_prop \error
+  \tl_show:N \subfiglist_dimensioned_spec_tl\error
+\captionsetup{type=figure}
+\subfiglist_put_canvas:n { 1 }
+\subfiglist_put_canvas:n { 2 }
 \end{subfiglist}
 \end{document}
