--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -936,8 +936,8 @@ xxx
 %  \subfiglist_spec_canvas_nums_tl
 %  \subfiglist_spec_canvas_nums_sorted_tl
 %  \subfiglist_canvas_count_int
-\begin{subfiglist*}{1 2}%{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
-%  \tl_show:N \subfiglist_spec_tl \error
+\begin{subfiglist*}{1 @{\color{red}\rule{2ex}{\subfiglistlineheight}} 2}%{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
+%  \tl_show:N \subfiglist_parsed_spec_tl \error
   \subfiglist_setup_file:nnn {} {1} { figures/01 }
   \subfiglist_setup_file:nnn {} {2} { figures/02 }
 %  \subfiglist_setup_dummy:nnn {} {3} { 1.23 }
@@ -959,8 +959,19 @@ xxx
 %  \prop_show:N \subfiglist_canvas_prop \error
 %  \tl_show:N \subfiglist_dimensioned_spec_tl\error
 \captionsetup{type=figure}
-\subfiglist_put_canvas:n { 1 }
-\subfiglist_put_space:n  { }
-\subfiglist_put_canvas:n { 2 }
+\tl_map_inline:Nn \subfiglist_dimensioned_spec_tl
+{
+  \subfiglist_tl_set_head:Nn \subfiglist_tempa_tl { #1 } 
+  \subfiglist_tl_set_tail:Nn \subfiglist_tempb_tl { #1 }
+  \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
+%  \tl_to_str:N \subfiglist_tempb_tl\\
+  \subfiglist_use:c { subfiglist_put_ \subfiglist_tempa_tl :V } \subfiglist_tempb_tl
+}
+
+%\subfiglist_put_lineheight:n { 80.76108pt }
+%\subfiglist_put_canvas:n { 1 }
+%\subfiglist_put_separator:n  { ab }
+%\subfiglist_put_canvas:n { 2 }
+%\color{red}\rule{2ex}{\subfiglistlineheight}
 \end{subfiglist*}
 \end{document}
