--- a/TODO
+++ b/TODO
@@ -26,6 +26,7 @@ TODO
 * Add "i" to name of inline macros, which modify variables without scoping
 * Introduce R-type argument for byref-tokens
 * Secure any \prop_get for occurence of \q_empty
+* Caveat: Don't use \subfiglistlineheight for anything related to width.
 
 
 
@@ -39,3 +40,4 @@ DONE
 * Make use of \tl_if_head_is_space in token list conditionals & revert to _or_empty versions of tl conditionals
 * Add \subfiglist_tl_if_eq_charcode and employ in lexer functions
 * Rename key_figures -> aspect
+* Differentiate between vmode and hmode dimensioning macros
