--- a/TODO
+++ b/TODO
@@ -27,6 +27,7 @@ TODO
 * Introduce R-type argument for byref-tokens
 * Secure any \prop_get for occurence of \q_empty
 * Caveat: Don't use \subfiglistlineheight for anything related to width.
+* Add default value in \subfiglist_tokenize_newline
 
 
 
