Added macro for aspect ratio of subblocks

--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -936,10 +936,14 @@ xxx
 %  \subfiglist_spec_canvas_nums_tl
 %  \subfiglist_spec_canvas_nums_sorted_tl
 %  \subfiglist_canvas_count_int
-\begin{subfiglist*}{1 @{\color{red}\rule{2ex}{\subfiglistlineheight}} 2\\}%{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
+\begin{subfiglist*}{1\\2\\3\\4}%{1 @{\color{red}\rule{2ex}{\subfiglistlineheight}} 2\\}%{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
 %  \tl_show:N \subfiglist_parsed_spec_tl \error
-  \subfiglist_setup_file:nnn {} {1} { figures/01 }
-  \subfiglist_setup_file:nnn {} {2} { figures/02 }
+%  \subfiglist_setup_file:nnn {} {1} { figures/01 }
+%  \subfiglist_setup_file:nnn {} {2} { figures/02 }
+\subfiglist_setup_dummy:nnn {} {1} {1:1}
+\subfiglist_setup_dummy:nnn {} {2} {1}
+\subfiglist_setup_dummy:nnn {} {3} {1}
+\subfiglist_setup_dummy:nnn {} {4} {1}
   
   \tl_to_str:N \subfiglist_parsed_spec_tl\\
 %  \dim_use:N\subfiglist_newline_correction_dim
@@ -949,18 +953,23 @@ xxx
 %  \subfiglist_setup_dummy:nnn {} {4} { 4:3 }
 %  \subfiglist_setup_dummy:nnn {} {5} { 4:3 }
   
-  \subfiglist_tl_set_tail:NV \subfiglist_tempa_tl \subfiglist_parsed_spec_tl
-  \subfiglist_tl_set_unwrapped:NV \subfiglist_tempa_tl \subfiglist_tempa_tl
-  \subfiglist_tl_set_tail:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
-  \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
-  \tl_to_str:N \subfiglist_tempb_tl\\
+%  \subfiglist_tl_set_tail:NV \subfiglist_tempa_tl \subfiglist_parsed_spec_tl
+%  \subfiglist_tl_set_unwrapped:NV \subfiglist_tempa_tl \subfiglist_tempa_tl
+%  \subfiglist_tl_set_tail:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
+%  \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
+%  \tl_to_str:N \subfiglist_tempb_tl\\
 %
 \fp_new:N \temp_fp
 \dim_new:N \tempa_dim
 \dim_new:N \tempb_dim
 %
-\subfiglist_dimension_vmode_newline:NnV \subfiglist_dimensioned_spec_tl { 205.16667pt } \subfiglist_tempb_tl
-\tl_to_str:N \subfiglist_dimensioned_spec_tl
+\subfiglist_get_aspect_subblock:NNNV \temp_fp \tempa_dim \tempb_dim \subfiglist_parsed_spec_tl
+
+\fp_use:N \temp_fp\\
+\dim_use:N \tempa_dim\\
+\dim_use:N \tempb_dim
+
+%\tl_to_str:N \subfiglist_dimensioned_spec_tl
 %\dim_use:N \subfiglist_line_height_dim\\
 %
 %%  \prop_show:N \subfiglist_canvas_prop \error
