--- a/TODO
+++ b/TODO
@@ -28,6 +28,8 @@ TODO
 * Secure any \prop_get for occurence of \q_empty
 * Caveat: Don't use \subfiglistlineheight for anything related to width.
 * Add default value in \subfiglist_tokenize_newline
+* Differentiate between vmode and hmode aspect ratio macros
+* Set ratio to NaN instead of 0 for non scalable tokens
 
 
 
