--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -2238,31 +2238,35 @@
 % #4: Token list with parsed specification string for current line
 %
 {
-  \group_begin:
-    \fp_zero:N  #1
-    \dim_zero:N #2
-    \dim_zero:N #3
-    
-    \tl_map_inline:nn { #4 }
-    {
-      \subfiglist_tl_set_head:Nn \subfiglist_tempa_tl { ##1 }
-      \subfiglist_tl_set_tail:Nn \subfiglist_tempb_tl { ##1 }
-      \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
-      
-      \subfiglist_use:c { subfiglist_get_aspect_ \subfiglist_tempa_tl :NNNV }
-        \subfiglist_temp_fp \subfiglist_tempa_dim \subfiglist_tempb_dim \subfiglist_tempb_tl
-      
-      \fp_add:NV #1 \subfiglist_temp_fp
-      \dim_add:NV #2 \subfiglist_tempa_dim
-      \dim_add:Nf #3 { \subfiglist_tempb_dim * \dim_ratio:nn { \fp_to_dim:N \subfiglist_temp_fp } { 1pt } }
-    }
-    
-    \dim_set:Nf #3 { #3 * \dim_ratio:nn { 1pt } { \fp_to_dim:N #1 } }
+  \fp_zero:N  #1
+  \dim_zero:N #2
+  \dim_zero:N #3
   
-  \subfiglist_group_var_return:NN \fp_set:Nn #1
-  \subfiglist_group_var_return:NN \dim_set:Nn #2
-  \subfiglist_group_var_return:NN \dim_set:Nn #3
-  \group_end:
+  \tl_map_inline:nn { #4 }
+  {
+    \subfiglist_tl_set_head:Nn \subfiglist_tempa_tl { ##1 }
+    \subfiglist_tl_set_tail:Nn \subfiglist_tempb_tl { ##1 }
+    \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
+    
+    \group_begin:
+      \subfiglist_use:c { subfiglist_get_aspect_ \subfiglist_tempa_tl :NNNV }
+        #1 #2 #3 \subfiglist_tempb_tl
+      
+      \fp_set:Nn \subfiglist_temp_fp #1
+      \dim_set:Nn \subfiglist_tempa_dim #2
+      \dim_set:Nn \subfiglist_tempb_dim #3
+    
+    \subfiglist_group_var_return:NN \fp_set:Nn \subfiglist_temp_fp
+    \subfiglist_group_var_return:NN \dim_set:Nn \subfiglist_tempa_dim
+    \subfiglist_group_var_return:NN \dim_set:Nn \subfiglist_tempb_dim
+    \group_end:
+    
+    \fp_add:NV #1 \subfiglist_temp_fp
+    \dim_add:NV #2 \subfiglist_tempa_dim
+    \dim_add:Nf #3 { \subfiglist_tempb_dim * \dim_ratio:nn { \fp_to_dim:N \subfiglist_temp_fp } { 1pt } }
+  }
+  
+  \dim_set:Nf #3 { #3 * \dim_ratio:nn { 1pt } { \fp_to_dim:N #1 } }
 }
 
 \cs_generate_variant:Nn \subfiglist_get_aspect_line:NNNn { NNNV }
@@ -2273,6 +2277,7 @@
 % #2: Dimension to store horizontal offset
 % #3: Dimension to store vertical offset
 % #4: Newline specification
+%
 {
   \fp_zero:N #1
   \dim_zero:N #2
@@ -2280,6 +2285,51 @@
 }
 
 \cs_generate_variant:Nn \subfiglist_get_aspect_newline:NNNn { NNNV }
+
+\cs_new:Npn \subfiglist_get_aspect_subblock:NNNn #1 #2 #3 #4
+%
+% #1: Floating point variable to store canvas ratio
+% #2: Dimension to store horizontal offset
+% #3: Dimension to store vertical offset
+% #4: Newline specification
+%
+{
+  \fp_zero:N  #1
+  \dim_zero:N #2
+  \dim_zero:N #3
+  
+  \tl_map_inline:nn { #4 }
+  {
+    \subfiglist_tl_set_head:Nn \subfiglist_tempa_tl { ##1 }
+    \subfiglist_tl_set_tail:Nn \subfiglist_tempb_tl { ##1 }
+    \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
+    
+    \group_begin:
+      \subfiglist_use:c { subfiglist_get_aspect_ \subfiglist_tempa_tl :NNNV }
+        #1 #2 #3 \subfiglist_tempb_tl
+      
+      \fp_set:Nn \subfiglist_temp_fp #1
+      \dim_set:Nn \subfiglist_tempa_dim #2
+      \dim_set:Nn \subfiglist_tempb_dim #3
+    
+    \subfiglist_group_var_return:NN \fp_set:Nn \subfiglist_temp_fp
+    \subfiglist_group_var_return:NN \dim_set:Nn \subfiglist_tempa_dim
+    \subfiglist_group_var_return:NN \dim_set:Nn \subfiglist_tempb_dim
+    \group_end:
+    
+    \fp_compare:nNnF { \subfiglist_temp_fp } = { \c_zero_fp }
+    {
+      \fp_compare:nNnTF { #1 } = { \c_zero_fp }
+      {
+        \fp_set:Nn #1 { \subfiglist_temp_fp }
+      }{
+        \fp_set:Nn #1 { 1 / ( ( 1 / #1 ) + ( 1 / \subfiglist_temp_fp ) ) }
+      }
+    }
+  }
+}
+
+\cs_generate_variant:Nn \subfiglist_get_aspect_subblock:NNNn { NNNV }
 
 
 
