--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -967,7 +967,8 @@ xxx
 
 \fp_use:N \temp_fp\\
 \dim_use:N \tempa_dim\\
-\dim_use:N \tempb_dim
+\dim_use:N \tempb_dim\\
+\subfiglist_is_nan:VTF \c_nan_fp { true } { false }
 
 %\tl_to_str:N \subfiglist_dimensioned_spec_tl
 %\dim_use:N \subfiglist_line_height_dim\\
