--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -45,6 +45,7 @@
 \dim_new:N  \subfiglist_effective_hoff_dim
 \dim_new:N  \subfiglist_effective_voff_dim
 \dim_new:N  \subfiglist_line_height_dim
+\dim_new:N  \subfiglist_line_width_dim
 
 \tl_new:N   \subfiglist_test_tl
 \tl_new:N   \subfiglist_head_tl
@@ -2437,6 +2438,50 @@
 \cs_generate_variant:Nn \subfiglist_dimension_hmode_separator:Nnn { NVV }
 
 
+\cs_new:Npn \subfiglist_dimension_hmode_subblock:Nnn #1 #2 #3
+%
+% #1: Token list variable for storing dimensioned specification string
+% #2: Height of current line
+% #3: Subblock specification
+%
+{
+  \subfiglist_get_aspect_hmode_subblock:NNNn
+    \subfiglist_effective_canvas_ratio_fp
+    \subfiglist_effective_hoff_dim
+    \subfiglist_effective_voff_dim
+    { #3 }
+  
+  \dim_set:Nn \subfiglist_line_width_dim { #2 }
+  \dim_sub:NV \subfiglist_line_width_dim \subfiglist_effective_voff_dim
+  \dim_set:Nn \subfiglist_line_width_dim
+    { \subfiglist_line_width_dim * \dim_ratio:nn { \fp_to_dim:N \subfiglist_effective_canvas_ratio_fp } { 1pt } }
+  \dim_add:NV \subfiglist_line_width_dim \subfiglist_effective_hoff_dim
+  
+  \group_begin:
+    \tl_map_inline:nn { #3 }
+    {
+      \subfiglist_tl_set_head:Nn \subfiglist_tempa_tl { ##1 }
+      \subfiglist_tl_set_tail:Nn \subfiglist_tempb_tl { ##1 }
+      \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
+      
+      \subfiglist_use:c { subfiglist_dimension_vmode_ \subfiglist_tempa_tl :NVV }
+        #1 \subfiglist_line_width_dim \subfiglist_tempb_tl
+    }
+    
+  \subfiglist_tl_set_from_prop:NN \subfiglist_tempa_tl \subfiglist_canvas_prop
+  \tl_set_eq:NN \subfiglist_tempb_tl #1
+  \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_tempa_tl
+  \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_tempb_tl
+  \group_end:
+  \subfiglist_prop_set_from_tl:NN \subfiglist_canvas_prop \subfiglist_tempa_tl
+  \tl_put_right:NV #1 \subfiglist_tempb_tl
+}
+
+\cs_generate_variant:Nn \subfiglist_dimension_hmode_subblock:Nnn { NnV }
+\cs_generate_variant:Nn \subfiglist_dimension_hmode_subblock:Nnn { NVn }
+\cs_generate_variant:Nn \subfiglist_dimension_hmode_subblock:Nnn { NVV }
+
+
 \cs_new:Npn \subfiglist_dimension_vmode_line:Nnn #1 #2 #3
 %
 % #1: Token list variable for storing dimensioned specification string
@@ -2444,7 +2489,7 @@
 % #3: Token list with parsed specification string for current line
 %
 {
-  \subfiglist_get_aspect_line:NNNn
+  \subfiglist_get_aspect_vmode_line:NNNn
     \subfiglist_effective_canvas_ratio_fp
     \subfiglist_effective_hoff_dim
     \subfiglist_effective_voff_dim
@@ -2470,10 +2515,12 @@
     }
     
   \subfiglist_tl_set_from_prop:NN \subfiglist_tempa_tl \subfiglist_canvas_prop
+  \tl_set_eq:NN \subfiglist_tempb_tl #1
   \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_tempa_tl
-  \subfiglist_group_var_return:NN \tl_set:Nn #1
+  \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_tempb_tl
   \group_end:
   \subfiglist_prop_set_from_tl:NN \subfiglist_canvas_prop \subfiglist_tempa_tl
+  \tl_put_right:NV #1 \subfiglist_tempb_tl
 }
 
 \cs_generate_variant:Nn \subfiglist_dimension_vmode_line:Nnn { NVn }
