--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -940,10 +940,10 @@ xxx
 %  \tl_show:N \subfiglist_parsed_spec_tl \error
 %  \subfiglist_setup_file:nnn {} {1} { figures/01 }
 %  \subfiglist_setup_file:nnn {} {2} { figures/02 }
-\subfiglist_setup_dummy:nnn {} {1} {2}
-\subfiglist_setup_dummy:nnn {} {2} {2}
-\subfiglist_setup_dummy:nnn {} {3} {2}
-\subfiglist_setup_dummy:nnn {} {4} {2}
+\subfiglist_setup_file:nnn {} {1} {figures/02}
+\subfiglist_setup_file:nnn {} {2} {figures/02}
+\subfiglist_setup_file:nnn {} {3} {figures/02}
+\subfiglist_setup_file:nnn {} {4} {figures/02}
   
   \tl_to_str:N \subfiglist_parsed_spec_tl\\
 %  \dim_use:N\subfiglist_newline_correction_dim
@@ -969,15 +969,15 @@ xxx
 \dim_use:N \tempa_dim\\
 \dim_use:N \tempb_dim\\
 
-\subfiglist_dimension_hmode_subblock:NnV \subfiglist_dimensioned_spec_tl { 100pt } \subfiglist_parsed_spec_tl
+\subfiglist_dimension_hmode_subblock:NnV \subfiglist_dimensioned_spec_tl { 200pt } \subfiglist_parsed_spec_tl
 
 \prop_show:N \subfiglist_canvas_prop
-\tl_show:N \subfiglist_dimensioned_spec_tl \error
+\tl_show:N \subfiglist_dimensioned_spec_tl %\error
 %\dim_use:N \subfiglist_line_height_dim\\
 %
 %%  \prop_show:N \subfiglist_canvas_prop \error
 %%  \tl_show:N \subfiglist_dimensioned_spec_tl\error
-%\captionsetup{type=figure}
+\captionsetup{type=figure}
 %\tl_map_inline:Nn \subfiglist_dimensioned_spec_tl
 %{
 %  \subfiglist_tl_set_head:Nn \subfiglist_tempa_tl { #1 } 
@@ -986,6 +986,7 @@ xxx
 %%  \tl_to_str:N \subfiglist_tempb_tl\\
 %  \subfiglist_use:c { subfiglist_put_ \subfiglist_tempa_tl :V } \subfiglist_tempb_tl
 %}
+\subfiglist_put_subblock:V \subfiglist_dimensioned_spec_tl
 %
 %%\subfiglist_put_lineheight:n { 80.76108pt }
 %%\subfiglist_put_canvas:n { 1 }
