--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -936,7 +936,8 @@ xxx
 %  \subfiglist_spec_canvas_nums_tl
 %  \subfiglist_spec_canvas_nums_sorted_tl
 %  \subfiglist_canvas_count_int
-\begin{subfiglist*}{1@{\hspace{10pt}}2\\[10pt]3@{\hspace{30pt}}4}%{1 @{\color{red}\rule{2ex}{\subfiglistlineheight}} 2\\}%{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
+\captionsetup{type=figure}
+\begin{subfiglist*}[w=10cm]{1 2\\3 4}%{1 @{\color{red}\rule{2ex}{\subfiglistlineheight}} 2\\}%{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
 %  \tl_show:N \subfiglist_parsed_spec_tl \error
 %  \subfiglist_setup_file:nnn {} {1} { figures/01 }
 %  \subfiglist_setup_file:nnn {} {2} { figures/02 }
@@ -945,7 +946,7 @@ xxx
 \subfiglist_setup_file:nnn {} {3} {figures/02}
 \subfiglist_setup_file:nnn {} {4} {figures/02}
   
-  \tl_to_str:N \subfiglist_parsed_spec_tl\\
+%  \tl_to_str:N \subfiglist_parsed_spec_tl\\
 %  \dim_use:N\subfiglist_newline_correction_dim
 %  \includegraphics{figures/01}\\[-1ex]
 %  \includegraphics{figures/02}
@@ -959,25 +960,25 @@ xxx
 %  \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
 %  \tl_to_str:N \subfiglist_tempb_tl\\
 %
-\fp_new:N \temp_fp
-\dim_new:N \tempa_dim
-\dim_new:N \tempb_dim
+%\fp_new:N \temp_fp
+%\dim_new:N \tempa_dim
+%\dim_new:N \tempb_dim
 %
-\subfiglist_get_aspect_hmode_subblock:NNNV \temp_fp \tempa_dim \tempb_dim \subfiglist_parsed_spec_tl
+%\subfiglist_get_aspect_hmode_subblock:NNNV \temp_fp \tempa_dim %\tempb_dim \subfiglist_parsed_spec_tl
 %
-\fp_use:N \temp_fp\\
-\dim_use:N \tempa_dim\\
-\dim_use:N \tempb_dim\\
+%\fp_use:N \temp_fp\\
+%\dim_use:N \tempa_dim\\
+%\dim_use:N \tempb_dim\\
 
-\subfiglist_dimension_hmode_subblock:NnV \subfiglist_dimensioned_spec_tl { 200pt } \subfiglist_parsed_spec_tl
+%\subfiglist_dimension_hmode_subblock:NnV \subfiglist_dimensioned_spec_tl { 200pt } \subfiglist_parsed_spec_tl
 
-\prop_show:N \subfiglist_canvas_prop
-\tl_show:N \subfiglist_dimensioned_spec_tl %\error
+%\prop_show:N \subfiglist_canvas_prop
+%\tl_show:N \subfiglist_dimensioned_spec_tl %\error
 %\dim_use:N \subfiglist_line_height_dim\\
 %
 %%  \prop_show:N \subfiglist_canvas_prop \error
 %%  \tl_show:N \subfiglist_dimensioned_spec_tl\error
-\captionsetup{type=figure}
+%\captionsetup{type=figure}
 %\tl_map_inline:Nn \subfiglist_dimensioned_spec_tl
 %{
 %  \subfiglist_tl_set_head:Nn \subfiglist_tempa_tl { #1 } 
@@ -986,7 +987,7 @@ xxx
 %%  \tl_to_str:N \subfiglist_tempb_tl\\
 %  \subfiglist_use:c { subfiglist_put_ \subfiglist_tempa_tl :V } \subfiglist_tempb_tl
 %}
-\subfiglist_put_subblock:V \subfiglist_dimensioned_spec_tl
+%\subfiglist_put_subblock:V \subfiglist_dimensioned_spec_tl
 %
 %%\subfiglist_put_lineheight:n { 80.76108pt }
 %%\subfiglist_put_canvas:n { 1 }
